# TimerApp

./: CMakeLists.txt  Makefile  README.md  common.h  main.c  raspi_toolchain.cmake
appTimer/: appTimer.c  appTimer.h
simulateLED/: simulateLED.c  simulateLED.h
